wrap text in calendar is correct

--- a/less/style.less
+++ b/less/style.less
@@ -253,6 +253,10 @@ table {
   width: 100%;
 }
 
+.calendar-calendar .month-view .full td.single-day div.monthview, .calendar-calendar .week-view .full td.single-day div.weekview, .calendar-calendar .day-view .full td.single-day div.dayview {
+  white-space: initial;
+}
+
 /*
  * Masthead for nav
  */
